#set(CMAKE_CXX_FLAGS "-fpermissive -pthread -fopenmp")
##set(CMAKE_C_FLAGS  "-fpermissive")
#
#add_executable(create_proc create_proc.cpp)
#add_executable(ipc_message ipc_message.cpp)
#add_executable(ipc_message_read ipc_message_read.cpp)
#add_executable(multi_thread multi_thread.cpp)

add_executable(h_bag_0_1 h_bag_0_1.cpp)
add_executable(h_n_queen h_n_queen.cpp)
add_executable(h_1_1 h_1_1.c)
add_executable(h_1_2 h_1_2.c)
add_executable(h_2_1 h_2_1.c)
add_executable(h_2_2 h_2_2.c)